<resources>
    <string name="app_name">Accounting Project</string>
    <string name="hint_year">Year</string>
    <string name="label_add">Add</string>
    <string name="hint_cash_flow">Input your cash flow...</string>
    <string name="label_year">Year N</string>
    <string name="year">Tahun</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="label_investment">Investment</string>
    <string name="label_interest_rate">Interest Rate</string>
    <string name="label_baseline">Baseline</string>
    <string name="label_second_rate">Second rate</string>
    <string name="label_first_rate">First rate</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="label_payback_Period">Payback Period</string>
    <string name="label_payback_period">Payback Period</string>
    <string name="label_npv">NPV</string>
    <string name="label_irr">IRR</string>
    <string name="app_logo">App Logo</string>
    <string name="add">Add</string>
    <string name="label_submit">Submit</string>
    <string name="image_close">close</string>
    <string name="label_keterangan">Keterangan :</string>
    <string name="icon_back">icon back</string>
    <string name="label_cash_flow">Enter your cashflow</string>
    <string name="hello">Hello Counter,</string>
    <string name="ready_to_count">Are you ready to start counting ?</string>
    <string name="label_service">Let\'s get started !</string>
    <string name="icon_repeat">repat</string>
    <string name="label_calculate_npv">Calculate NPV</string>
    <string name="label_calculate_payback">Calculate Payback Period</string>
    <string name="icon_money">money</string>
    <string name="label_calculate_new_irr">Calculate IRR with RRR</string>
    <string name="label_calculate_irr">Calculate IRR</string>
    <string name="label_RRR">RRR</string>
    <string name="label_discounto_1">Discounto 1</string>
    <string name="label_discounto_2">Discounto 2</string>
    <string name="gambar_dadakan">gambar dadakan</string>
    <string name="result_cal">Result Calculation</string>
    <string name="label_calculate_all">Calculate All</string>
</resources>