<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_32"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/hello"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ready_to_count"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_hello"
        app:layout_constraintTop_toBottomOf="@id/tv_hello" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/dimens_50"
        android:layout_height="@dimen/dimens_50"
        android:layout_marginTop="@dimen/dimens_32"
        android:layout_marginEnd="@dimen/dimens_16"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="50dp" />

<!--    <TextView-->
<!--        android:id="@+id/tv_started"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/dimens_32"-->
<!--        android:layout_marginStart="@dimen/dimens_16"-->
<!--        android:layout_marginEnd="@dimen/dimens_16"-->
<!--        android:fontFamily="@font/poppins_medium"-->
<!--        android:textSize="20sp"-->
<!--        android:text="@string/label_service"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv_ready"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <View
        android:id="@+id/view_feature_npv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_115"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_32"
        android:layout_marginEnd="@dimen/dimens_16"
        android:background="@drawable/bg_feature"
        android:backgroundTint="#1F4690"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ready" />

    <ImageView
        android:id="@+id/iv_feature_npv"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="80dp"
        android:src="@drawable/ic_repeat"
        android:contentDescription="@string/icon_repeat"
        app:tint="#ffffff"
        app:layout_constraintTop_toTopOf="@id/view_feature_npv"
        app:layout_constraintStart_toStartOf="@id/view_feature_npv"
        app:layout_constraintEnd_toStartOf="@id/tv_feature_npv"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_npv"/>

    <TextView
        android:id="@+id/tv_feature_npv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"
        android:text="@string/label_calculate_npv"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/view_feature_npv"
        app:layout_constraintStart_toEndOf="@id/iv_feature_npv"
        app:layout_constraintEnd_toEndOf="@id/view_feature_npv"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_npv"/>

    <View
        android:id="@+id/view_feature_payback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_115"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:background="@drawable/bg_feature"
        android:backgroundTint="#3A5BA0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_feature_npv" />

    <ImageView
        android:id="@+id/iv_feature_payback"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_money_check"
        android:contentDescription="@string/icon_money"
        app:tint="#ffffff"
        app:layout_constraintTop_toTopOf="@id/view_feature_payback"
        app:layout_constraintStart_toStartOf="@id/view_feature_payback"
        app:layout_constraintEnd_toStartOf="@id/tv_feature_payback"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_payback"/>

    <TextView
        android:id="@+id/tv_feature_payback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"
        android:text="@string/label_calculate_payback"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/view_feature_payback"
        app:layout_constraintStart_toEndOf="@id/iv_feature_payback"
        app:layout_constraintEnd_toEndOf="@id/view_feature_payback"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_payback"/>

    <View
        android:id="@+id/view_feature_new_irr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_115"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:background="@drawable/bg_feature"
        android:backgroundTint="#FFA501"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_feature_payback" />

    <ImageView
        android:id="@+id/iv_feature_new_irr"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/ic_money_bill"
        android:contentDescription="@string/icon_money"
        app:tint="#000000"
        app:layout_constraintTop_toTopOf="@id/view_feature_new_irr"
        app:layout_constraintStart_toStartOf="@id/view_feature_new_irr"
        app:layout_constraintEnd_toStartOf="@id/tv_feature_new_irr"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_new_irr"/>

    <TextView
        android:id="@+id/tv_feature_new_irr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"
        android:text="@string/label_calculate_new_irr"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/view_feature_new_irr"
        app:layout_constraintStart_toEndOf="@id/iv_feature_new_irr"
        app:layout_constraintEnd_toEndOf="@id/view_feature_new_irr"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_new_irr"/>

    <View
        android:id="@+id/view_feature_all"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_115"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:background="@drawable/bg_feature"
        android:backgroundTint="#FFE5B4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_feature_new_irr" />

    <ImageView
        android:id="@+id/iv_feature_all"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="80dp"
        android:src="@drawable/ic_money_bill"
        android:contentDescription="@string/icon_money"
        app:tint="#000000"
        app:layout_constraintTop_toTopOf="@id/view_feature_all"
        app:layout_constraintStart_toStartOf="@id/view_feature_all"
        app:layout_constraintEnd_toStartOf="@id/tv_feature_all"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_all"/>

    <TextView
        android:id="@+id/tv_feature_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"
        android:text="@string/label_calculate_all"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/view_feature_all"
        app:layout_constraintStart_toEndOf="@id/iv_feature_all"
        app:layout_constraintEnd_toEndOf="@id/view_feature_all"
        app:layout_constraintBottom_toBottomOf="@id/view_feature_all"/>

</androidx.constraintlayout.widget.ConstraintLayout>
